--- a/src/app/components/basic-information/basic-information.component.scss
+++ b/src/app/components/basic-information/basic-information.component.scss
@@ -61,4 +61,19 @@ fieldset {
  
 }
 
+.basic-layout {
+  padding-top: 40px;
+}
 
+.mt-16{
+  margin-top: 16px;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.title {
+  color: #FFFFFF; 
+  font-size: 14px;
+}
