--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -1,3 +1,14 @@
-<div #ht_container class="ht-container">
+<!-- <div #ht_container class="ht-container">
   <app-sheet  #grid [options]="options"></app-sheet>
+</div> -->
+
+
+<div class="basic-layout">
+  <div class="container-fluid mt-16">
+    <div class="row left-contents">
+      <div #ht_container class="ht-container">
+        <app-sheet  #grid [options]="options"></app-sheet>
+      </div>      
+    </div>
+  </div>
 </div>
