--- a/src/app/components/members/members.component.scss
+++ b/src/app/components/members/members.component.scss
@@ -1,4 +1,21 @@
 .ht-container {
-  width: 810px;
+  width: 786px;
+}
+
+.left-contents {
   float: left;
+  margin-right: 15px;
+}
+
+.basic-layout {
+  padding-top: 40px;
+}
+
+.mt-16{
+  margin-top: 16px;
+  margin-left: 16px;
+}
+
+.w-100 {
+  width: 100%;
 }
