--- a/src/app/components/calculation-print/calculation-print.component.scss
+++ b/src/app/components/calculation-print/calculation-print.component.scss
@@ -1,39 +1,155 @@
-.condition-container {
-    display: grid;
-    grid-column: 3;
-    grid-template-columns: 250px 150px;
+.calculate-container {
+    padding: 16px;
 }
 
-.print-item {
-    margin: 15px;
-    grid-column: 1 / 2;
-}
-.print-item-1{
-    margin: 15px;
-    grid-column: 3 / 3;
-    width: fit-content;
-}
-.calculate-item { 
-    margin: 15px;
-    grid-column: 2 / 2;
+.c-contentsArea {
+    background: var(--base-900);
 }
 
-.table-container {
-    margin-left: 15px;
-    margin-top: 30px;
-    width: 350px;
+.download-container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    .download-items {
+        display: flex;
+        flex-direction: row;
+        column-gap: 24px;
+    
+        .download-item {
+            width: 348px;
+        }
+    }    
+    #downloadButton {
+        font-size: 16px;
+        font-weight: 700;
+        padding: 12px 30px;
+        background: var(--primary-600);
+        color: var(--text-main);
+        border: none;
+        border-radius: 4px;
+    }
 }
 
-.hot {
-    margin-left: 15px;
-    margin-right: 15px;
+.print-container {
+    margin-top: 32px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    
+    .print-item {
+        width: 348px;
+    }
+    #printButton {
+        font-size: 16px;
+        font-weight: 700;
+        padding: 12px 30px;
+        background: var(--primary-600);
+        color: var(--text-main);
+        border: none;
+        border-radius: 4px;
+    }
 }
 
-.button-container {
-    margin-left: 15px;
-    margin-top: 30px;   
+
+.checkbox-container {
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+.checkbox-title {
+    margin: 0;
 }
 
-fieldset {
-    border: 1px #cacaca solid;
-  }
+legend {
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.radio-parts {
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    padding: 6px 16px 6px 24px;
+    background-color: #404347;
+    border-radius: 3px;
+    margin-top: 4px;
+}
+
+.checkbox-input {
+    display: none;
+}
+
+.checkbox-parts {
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    height: 30px;
+    position: relative;
+    width: 100%;
+    font-size: 14px;
+    background: #475059;
+    border-radius: 3px;
+    margin-bottom: 4px;
+}
+
+.checkbox-input:checked + .checkbox-parts {
+    background: var(--checkbox_selected);
+}
+
+.checkbox-parts-disabled {
+    display: flex;
+    padding-left: 30px;
+    position: relative;
+    width: 100%;
+    opacity: 0.3;
+}
+
+.checkbox-parts::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 6px;
+    transform: translateY(-50%);
+    width: 12px;
+    height: 12px;
+    border: 1px solid #2b2d30;
+    background-color: #2b2d30;
+    border-radius: 2px;
+}
+
+.checkbox-parts-disabled::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #999;
+    border-radius: 4px;
+    disabled: 1;
+}
+
+.checkbox-input:hover + .checkbox-parts:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.checkbox-input:checked + .checkbox-parts {
+    color: var(--primary);
+}
+
+.checkbox-input:checked + .checkbox-parts::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 4px;
+    left: 10px;
+    width: 7px;
+    height: 14px;
+    transform: rotate(40deg);
+    border-bottom: 3px solid var(--primary);
+    border-right: 3px solid var(--primary);
+}
