--- a/src/app/components/sheet/sheet.component.scss
+++ b/src/app/components/sheet/sheet.component.scss
@@ -6,6 +6,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    color: #1a1a1c;
     &::before {
         content: "";
         position: absolute;
@@ -19,13 +20,12 @@
     }
 }
 
-#member-table {
+.description-table {
     position: absolute;
-    top: 70px;
-    left: 16.5%;
     padding: 20px 10px;
     border-radius: 4px;
     background: #fff;
+
     &::before {
         content: "";
         inset: 0;
@@ -33,6 +33,22 @@
         inset: -10%;
     }
 }
+
+#member-table {
+    top: 60px;
+    left: 32%;
+}
+
+#crack-table {
+    top: 38px;
+    left: 30%;
+}
+
+#safety-table {
+    top: 38px;
+    left: 84%;
+}
+
 
 table {
     p {
@@ -57,4 +73,10 @@ table {
     td {
         height: 22px;
     }
+}
+
+.sheet-layout {
+    border-radius: 4px;
+    border: 1px solid #63676c;
+    font-size: 12px;
 }
