--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,9 +19,11 @@ body {
     padding: 0;
     font-family: "Noto Sans JP", sans-serif;
     background: var(--base_bg);
+    color: var(--text_main);
 }
 
-a {
+a,
+legend {
     color: var(--text_main);
 }
 
@@ -33,6 +35,10 @@ a:hover {
 
 ngb-modal-backdrop {
     z-index: 1039 !important;
+}
+
+.no-table #safety-table {
+    display: none !important;
 }
 
 //grid
