仕様・条件のデザイン変更

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -122,9 +122,12 @@
         <p class="topic" translate>basic-information.dc</p>
         <ng-container *ngFor="let item of conditions_list; index as i">
           <div class="d-flex" [ngClass]="{'cond-chk-active': item.selected, 'cond-chk': !item.selected}">
-            <input type="checkbox" name="conditions{{i}}" id="conditions{{i}}" [(ngModel)]="item.selected"
-              [value]="item.id" [checked]="item.selected" />
-            <label class="form-check-label" for="conditions{{i}}">{{item.title | translate}}</label>
+            <label class="checkbox-container" for="conditions{{i}}">
+              <input type="checkbox" name="conditions{{i}}" id="conditions{{i}}" [(ngModel)]="item.selected"
+                [value]="item.id" [checked]="item.selected"
+                class="checkbox-input" />
+              <span translate class="checkbox-parts title">{{item.title | translate}}</span>
+            </label>
           </div>
         </ng-container>
   
