--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -2,13 +2,16 @@
   <app-sheet  #grid [options]="options"></app-sheet>
 </div> -->
 
-
 <div class="basic-layout">
   <div class="container-fluid mt-16">
     <div class="row left-contents">
       <div #ht_container class="ht-container">
-        <app-sheet  #grid [options]="options"></app-sheet>
-      </div>      
+        <app-sheet
+          #grid
+          [options]="options"
+          [class.isManual]="isManual"
+        ></app-sheet>
+      </div>
     </div>
   </div>
 </div>
