--- a/src/app/components/calculation-print/calculation-print.component.scss
+++ b/src/app/components/calculation-print/calculation-print.component.scss
@@ -27,6 +27,10 @@
         color: var(--text-main);
         border: none;
         border-radius: 4px;
+        &:disabled {
+            background: var(--primary-800);
+            opacity: 0.7;
+        }
     }
 }
 
@@ -47,6 +51,10 @@
         color: var(--text-main);
         border: none;
         border-radius: 4px;
+        &:disabled {
+            background: var(--primary-800);
+            opacity: 0.7;
+        }
     }
 }
 
