Hidden when finish WebDan の SRC 構造の対応 #27 が終わるまで非表示にする

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,9 @@
             <span translate>app.bars</span>
           </a>
         </li>
-        <li class="c-mainNavArea__navItem">
+
+        <!-- Hidden when finish WebDan の SRC構造の対応 #27 -->
+        <!-- <li class="c-mainNavArea__navItem">
           <a
             routerLink="./steels"
             routerLinkActive="selected-item"
@@ -76,7 +78,7 @@
           >
             <span translate>app.steels</span>
           </a>
-        </li>
+        </li> -->
         <li class="c-mainNavArea__navItem">
           <a
             routerLink="./shear"
