--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -3,7 +3,8 @@
 </div>
 
 <div class="footer">
-  <div class="left-table">
+  <!-- Hidden when finish WebDan の SRC構造の対応 #27 -->
+  <!-- <div class="left-table">
   <p translate>members.section_sh</p>
   <table >
     <thead>
@@ -40,8 +41,11 @@
         <td translate>members.oval</td>
       </tr>
     </tbody>
-  </table>
-</div>
+  </table> 
+</div>-->
+
+
+
 <!-- 
 <div class="right-table">
   <p><br/></p>
