--- a/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
+++ b/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
@@ -44,7 +44,8 @@
     </div>
   </div>
 
-  <div class="sectionTitle">
+  <!-- Hidden when finish WebDan の SRC構造の対応 #27 -->
+  <!-- <div class="sectionTitle">
     <h4 translate>safety-factors-material-strengths.steel</h4>
   </div>
   <div class="safety-factors">
@@ -59,7 +60,7 @@
     <div class="table-container">
       <app-sheet #grid5 [options]="options5"></app-sheet>
     </div>
-  </div>
+  </div> -->
 
 
   <div class="sectionTitle">
