--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -4,7 +4,7 @@
 
 <div class="footer">
   <!-- Hidden when finish WebDan の SRC構造の対応 #27 -->
-  <!-- <div class="left-table">
+  <div class="left-table">
   <p translate>members.section_sh</p>
   <table >
     <thead>
@@ -12,9 +12,9 @@
         <th width="50px">
           <p translate>members.No</p>
         </th>
-        <th width="70px">
+        <!-- <th width="70px">
           <p translate>members.structure</p>
-        </th>
+        </th> -->
         <th width="90px">
           <p translate>members.shape</p>
         </th>
@@ -23,7 +23,7 @@
     <tbody>
       <tr>
         <td>1</td>
-        <td rowspan="2">RC, SRC</td>
+        <!-- <td rowspan="2">RC, SRC</td> -->
         <td translate>members.rectangle</td>
       </tr>
       <tr>
@@ -32,17 +32,17 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>RC, CFT</td>
+        <!-- <td>RC, CFT</td> -->
         <td translate>members.r_shape</td>
       </tr>
       <tr>
         <td>4</td>
-        <td>RC</td>
+        <!-- <td>RC</td> -->
         <td translate>members.oval</td>
       </tr>
     </tbody>
   </table> 
-</div>-->
+</div>
 
 
 
