断面形状に円環を追加、ヘルプをマニュアルに変更

--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -33,7 +33,7 @@
       <tr>
         <td>3</td>
         <!-- <td>RC, CFT</td> -->
-        <td translate>members.r_shape</td>
+        <td translate>members.circle</td>
       </tr>
       <tr>
         <td>4</td>
