--- a/src/app/components/subNavArea.scss
+++ b/src/app/components/subNavArea.scss
@@ -37,5 +37,7 @@
 .c-sheetArea {
   padding-top: 24px;
   padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 16px;
   background: var(--base-900);
 }
