--- a/src/app/components/alert-dialog/alert-dialog.component.html
+++ b/src/app/components/alert-dialog/alert-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="modal-wrapper">
-  <div [innerHTML]="message"></div>
+  <div class="text">{{ message }}</div>
   <div class="button-wrapper" *ngIf="dialogMode === 'confirm'">
     <div
       type="button"
