--- a/src/app/components/alert-dialog/alert-dialog.component.scss
+++ b/src/app/components/alert-dialog/alert-dialog.component.scss
@@ -6,6 +6,7 @@
     justify-content: center;
   }
   .text {
+    color: #222;
     font-size: 16px;
     font-family: "Noto Sans JP", sans-serif;
     font-weight: 700;
