--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -2,8 +2,9 @@
   <app-sheet  #grid [options]="options"></app-sheet>
 </div>
 
+  <!-- Hidden when finish WebDan の SRC構造の対応 #27
 <div class="footer">
-  <!-- Hidden when finish WebDan の SRC構造の対応 #27 -->
+
   <div class="left-table">
   <p translate>members.section_sh</p>
   <table >
@@ -12,9 +13,9 @@
         <th width="50px">
           <p translate>members.No</p>
         </th>
-        <!-- <th width="70px">
+         <th width="70px">
           <p translate>members.structure</p>
-        </th> -->
+        </th>
         <th width="90px">
           <p translate>members.shape</p>
         </th>
@@ -23,7 +24,7 @@
     <tbody>
       <tr>
         <td>1</td>
-        <!-- <td rowspan="2">RC, SRC</td> -->
+         <td rowspan="2">RC, SRC</td>
         <td translate>members.rectangle</td>
       </tr>
       <tr>
@@ -32,17 +33,18 @@
       </tr>
       <tr>
         <td>3</td>
-        <!-- <td>RC, CFT</td> -->
+        <td>RC, CFT</td>
         <td translate>members.circle</td>
       </tr>
       <tr>
         <td>4</td>
-        <!-- <td>RC</td> -->
+        <td>RC</td>
         <td translate>members.oval</td>
       </tr>
     </tbody>
-  </table> 
+  </table>
 </div>
+-->
 
 
 
@@ -78,5 +80,5 @@
     </tbody>
   </table>
 </div>
- -->
 </div>
+-->
