--- a/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
+++ b/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
@@ -11,109 +11,100 @@
 </div>
 
 <div class="tabContent">
-  <div class="sectionTitle">
-    <h4 translate>safety-factors-material-strengths.rsb_con</h4>
-  </div>
+  <ul class="tab-select-items">
+    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'rsb_con'}" (click)="setActiveTab('rsb_con')" translate>safety-factors-material-strengths.rsb_con</li>
+    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'steel'}" (click)="setActiveTab('steel')" translate>safety-factors-material-strengths.steel</li>
+    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'pile'}" (click)="setActiveTab('pile')" translate>safety-factors-material-strengths.pile</li>
+  </ul>
 
-  <div class="safety-factors">
-    <h5 translate>safety-factors-material-strengths.safe</h5>
-    <div class="table-container">
-      <app-sheet #grid1 [options]="options1"></app-sheet>
-    </div>
-
-    <div class="range-fieldset">
-      <fieldset>
-        <legend translate>safety-factors-material-strengths.rsb_arr</legend>
-        <ol>
-          <li translate>safety-factors-material-strengths.rsb_ten</li>
-          <li translate>safety-factors-material-strengths.ten_com</li>
-          <li translate>safety-factors-material-strengths.all</li>
-        </ol>
-      </fieldset>
-    </div>
-  </div>
-
-  <div class="material-strength">
-    <h5 translate>safety-factors-material-strengths.r_mta</h5>
-    <div class="table-container">
-      <app-sheet #grid2 [options]="options2"></app-sheet>
+  <div class="tab-inner">
+    <div class="item-container" [ngClass]="{'hide': activeTab !== 'rsb_con'}">
+      <div class="safety-factors">
+        <h5 translate>safety-factors-material-strengths.safe</h5>
+        <div class="table-container">
+          <app-sheet #grid1 [options]="options1"></app-sheet>
+        </div>
+      </div>
+  
+      <div class="material-strength">
+        <h5 translate>safety-factors-material-strengths.r_mta</h5>
+        <div class="table-container">
+          <app-sheet #grid2 [options]="options2" class="no-table"></app-sheet>
+        </div>
+      </div>
       <div class="concrete-strength">
         <h5 translate>safety-factors-material-strengths.c_mta</h5>
-        <app-sheet #grid3 [options]="options3"></app-sheet>
+        <app-sheet #grid3 [options]="options3" class="no-table"></app-sheet>
       </div>
     </div>
-  </div>
-
-  <!-- Hidden when finish WebDan の SRC構造の対応 #27 -->
-  <!-- <div class="sectionTitle">
-    <h4 translate>safety-factors-material-strengths.steel</h4>
-  </div>
-  <div class="safety-factors">
-    <h5 translate>safety-factors-material-strengths.safe</h5>
-    <div class="table-container">
-      <app-sheet #grid4 [options]="options4"></app-sheet>
+  
+    <div class="item-container" [ngClass]="{'hide': activeTab !== 'steel'}">
+      <div class="safety-factors">
+        <h5 translate>safety-factors-material-strengths.safe</h5>
+        <div class="table-container">
+          <app-sheet #grid4 [options]="options4" class="no-table"></app-sheet>
+        </div>
+      </div>
+    
+      <div class="material-strength">
+        <h5 translate>safety-factors-material-strengths.s_mta</h5>
+        <div class="table-container">
+          <app-sheet #grid5 [options]="options5" class="no-table"></app-sheet>
+        </div>
+      </div>
     </div>
-  </div>
-
-  <div class="material-strength">
-    <h5 translate>safety-factors-material-strengths.s_mta</h5>
-    <div class="table-container">
-      <app-sheet #grid5 [options]="options5"></app-sheet>
+  
+    <div class="item-container" [ngClass]="{'hide': activeTab !== 'pile'}">
+      <div class="pile-factors">
+        <h5 translate>safety-factors-material-strengths.pile</h5>
+        <table>
+          <thead>
+            <tr>
+              <th rowspan="2" colspan="2">
+                <p translate>safety-factors-material-strengths.method</p>
+              </th>
+              <th colspan="3">          
+                <p translate>safety-factors-material-strengths.ρc</p>
+              </th>
+              <th rowspan="2" width="110px">
+              <p translate>safety-factors-material-strengths.vcd</p>
+              </th>
+            </tr>
+            <tr>
+              <th width="80px">          
+                <p translate>safety-factors-material-strengths.cs</p>
+              </th>
+              <th width="80px">          
+                <p translate>safety-factors-material-strengths.as</p>
+              </th>
+              <th width="80px">          
+                <p translate>safety-factors-material-strengths.young</p>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let item of options6; index as i">
+              <tr>
+                <td width="20px">
+                  <input type="radio" 
+                    name="pile_factor" 
+                    id="pile_factor{{i}}"
+                    [(ngModel)]="pile_factor_select_id" 
+                    [value]="item.id"
+                    [checked]="item.selected" 
+                    (change)="setPileFactor(i)" />
+                </td>
+                <td style="text-align: left" width="200px">{{item.title}}</td>
+                <td>{{item.rfck.toFixed(2)}}</td>
+                <td>{{item.rfbok.toFixed(2)}}</td>
+                <td>{{item.rEc.toFixed(2)}}</td>
+                <td>{{item.rVcd.toFixed(2)}}</td>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div> -->
-
-
-  <div class="sectionTitle">
-    <h4 translate>safety-factors-material-strengths.pile</h4>
-  </div>
-  <div class="pile-factors">
-    <h5 translate>safety-factors-material-strengths.pile</h5>
-    <table>
-      <thead>
-        <tr>
-          <th rowspan="2" colspan="2">
-            <p translate>safety-factors-material-strengths.method</p>
-          </th>
-          <th colspan="3">          
-            <p translate>safety-factors-material-strengths.ρc</p>
-          </th>
-          <th rowspan="2" width="110px">
-          <p translate>safety-factors-material-strengths.vcd</p>
-          </th>
-        </tr>
-        <tr>
-          <th width="80px">          
-            <p translate>safety-factors-material-strengths.cs</p>
-          </th>
-          <th width="80px">          
-            <p translate>safety-factors-material-strengths.as</p>
-          </th>
-          <th width="80px">          
-            <p translate>safety-factors-material-strengths.young</p>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <ng-container *ngFor="let item of options6; index as i">
-          <tr>
-            <td width="20px">
-              <input type="radio" 
-                name="pile_factor" 
-                id="pile_factor{{i}}"
-                [(ngModel)]="pile_factor_select_id" 
-                [value]="item.id"
-                [checked]="item.selected" 
-                (change)="setPileFactor(i)" />
-            </td>
-            <td style="text-align: left" width="200px">{{item.title}}</td>
-            <td>{{item.rfck.toFixed(2)}}</td>
-            <td>{{item.rfbok.toFixed(2)}}</td>
-            <td>{{item.rEc.toFixed(2)}}</td>
-            <td>{{item.rVcd.toFixed(2)}}</td>
-          </tr>
-        </ng-container>
-      </tbody>
-    </table>
   </div>
 
 </div>
