鉄骨を非表示

--- a/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
+++ b/src/app/components/safety-factors-material-strengths/safety-factors-material-strengths.component.html
@@ -13,7 +13,7 @@
 <div class="tabContent">
   <ul class="tab-select-items">
     <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'rsb_con'}" (click)="setActiveTab('rsb_con')" translate>safety-factors-material-strengths.rsb_con</li>
-    <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'steel'}" (click)="setActiveTab('steel')" translate>safety-factors-material-strengths.steel</li>
+    <!--<li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'steel'}" (click)="setActiveTab('steel')" translate>safety-factors-material-strengths.steel</li>-->
     <li class="tab-select-item" [ngClass]="{'is-active': activeTab === 'pile'}" (click)="setActiveTab('pile')" translate>safety-factors-material-strengths.pile</li>
   </ul>
 
