Add a ring to the cross-sectional shape table

--- a/src/app/components/sheet/sheet.component.html
+++ b/src/app/components/sheet/sheet.component.html
@@ -12,9 +12,9 @@
             <th width="54px">
               <p translate>members.No</p>
             </th>
-            <th width="85px">
+            <!-- <th width="85px">
               <p translate>members.structure</p>
-            </th>
+            </th> -->
             <th width="77px">
               <p translate>members.shape</p>
             </th>
@@ -23,7 +23,7 @@
         <tbody>
           <tr>
             <td>1</td>
-            <td rowspan="2">RC, SRC</td>
+            <!-- <td rowspan="2">RC, SRC</td> -->
             <td translate>members.rectangle</td>
           </tr>
           <tr>
@@ -32,12 +32,12 @@
           </tr>
           <tr>
             <td>3</td>
-            <td>RC, CFT</td>
+            <!-- <td>RC, CFT</td> -->
             <td translate>members.r_shape</td>
           </tr>
           <tr>
             <td>4</td>
-            <td>RC</td>
+            <!-- <td>RC</td> -->
             <td translate>members.oval</td>
           </tr>
         </tbody>
